# computer-simulation

./: README.md  analyse.py  analyse_turnover.py  analysis.ipynb  experiment_analysis.ipynb  pyproject.toml  run_all_experiments.py  run_behaviorspace.py  run_experiments.py  run_experiments.sh  runpod_setup.sh  sensitivity_analysis.ipynb  sensitivity_analysis_1.ipynb  sensitivity_analysis_batch_2.ipynb  simulation-sensitivity-analysis-experiment.xml  simulation.nlogox
output/: test-experiment-1.csv
