[project]
name = "computer-simulation"
version = "0.1.0"
description = "Scripts used for computer simulation course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "ruff>=0.15.11",
    "scipy>=1.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
